<resources>
    <string name="host_for_ip">https://api.ipify.org/?format=json</string>
    <string name="app_name">News Server</string>
    <string name="NO_NET_NOTIFICATION_MESSAGE">No internet connection!</string>
    <string name="default_time_zone">Asia/Dhaka</string>
    <string name="default_date_format">yyyy-MM-dd</string>
    <string name="HTTP">https:</string>
    <string name="data_loading_message">Loading data. Please wait.....</string>
    <string name="display_date_format_short">dd MMM yyyy</string>
    <string name="display_date_format_long">EEE, d MMM yyyy, HH:mm</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="developer_email_address">bikash.news.server@gmail.com</string>
    <string name="nav_drawer_open">nav_drawer_open</string>
    <string name="nav_drawer_close">nav_drawer_close</string>
    <string name="welcome_message">Welcome!</string>
    <string name="app_exit_prompt">Exit News Server?</string>
    <string name="article_pager_activity_lebel">Published Articles</string>
    <string name="share_app_menu_item_title">Share App</string>
    <string name="email_developer_menu_item_title">User Feedback</string>
    <string name="settings_menu_item_title">Settings</string>
    <string name="about_app__menu_item_title">About News Server</string>
    <string name="email_share_app_subject">Sharing News Server android app</string>
    <string name="share_app_chooser_text">Share app Via</string>
    <string name="email_developer_subject">User feedback on News Server</string>
    <string name="email_com_chooser_text">Email Us via</string>
    <string name="about_app_text"><![CDATA[
        <h3><u>অ্যাপ্লিকেশন সম্পর্কে কিছু কথা</u></h3><br/>
            এই অ্যাপ্লিকেশন ব্যবহারের জন্য ইন্টারনেট কানেকশনের প্রয়োজন হবে।<br/><br/>
            এই অ্যাপ্লিকেশনে প্রদর্শিত সমস্ত তথ্য এবং ছবি www.prothomalo.com থেকে সংগ্রহ করা হয়েছে। তাই প্রদর্শিত তথ্যের ক্রেডিট অথবা দায়ভার কোনটাই আমাদের উপর বর্তায় না।<br/><br/>
            অ্যাপ্লিকেশনটি ব্যবহার করার জন্য ধন্যবাদ।<br/><br/>
    ]]></string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">notification_channel_description</string>
    <string name="add_on_home_menu_item_title">Pin on app Home</string>
    <string name="add_on_newspaper_home_menu_item_title">Pin on newspaper Home</string>
    <string name="home_page_menu_text">Home</string>
    <string name="newspaper_list_menu_text">Newspaper Menu</string>
    <string name="news_category_list_menu_text">News Categories</string>
    <string name="newspaper_home_page_menu_text_bangla">প্রচ্ছদ</string>
    <string name="newspaper_home_page_menu_text_english">Home Page</string>
    <string name="add_new_news_category_menu_text">Add/Remove News Category</string>
    <string name="clear_cached_data_menu_item_title">Clear cached data</string>
    <string name="edit_feature_group_menu_item_title">Configure Page Group</string>
    <string name="save_article_locally_menu_item_title">Save Article</string>
    <string name="delete_article_from_storage_menu_item_title">Delete Article</string>
    <string name="article_save_message">Article saved on local storage.</string>
    <string name="article_delete_message">Article deleted from local storage.</string>
    <string name="article_save_failure_message">Please retry after article is loaded.</string>
    <string name="settings_item_image_download_on_data_network_text">Download image on mobile data network</string>
    <string name="settings_item_show_drawer_menu_on_start_text">Show left Navigation Drawer menu on start up:</string>
    <string name="settings_item_clear_cached_data_text">Clear cached data</string>
    <string name="settings_item_customize_newspaper_views_text">Customize newspaper menu</string>
    <string name="settings_item_customize_home_pages_text">Customize App/Newspaper Home Page</string>
    <string name="settings_item_customize_feature_groups_text">Add/Modify custom news category</string>
    <string name="settings_item_customize_notifications_text">Customize push notifications</string>
    <string name="settings_item_reset_to_factory_text">Reset to factory settings</string>
    <string name="settings_activity_lebel">Settings</string>
    <string name="customize_app_home_page_text">Customize App Home page</string>
    <string name="customize_newspaper_home_page_text">Click on Newspaper name to customize Home page:</string>
    <string name="customize_home_pages_fragment_title">Customize Home Pages</string>
    <string name="add_new_custom_geature_group_view_text">Add new custom News Category</string>
    <string name="current_custom_feature_groups_text">Click on category name to add/remove page:</string>
    <string name="activate_feature_group_view_text">Activate</string>
    <string name="deactivate_feature_group_view_text">Deactivate</string>
    <string name="add_new_news_category_prompt">Input new News Category name:</string>
    <string name="rename_feature_group_view_text">Rename</string>
    <string name="rename_new_news_category_prompt">Enter new name and hit Ok:</string>
    <string name="favorite_features_menu_text">Favourites</string>
    <string name="most_frequent_features_menu_text">Frequently Viewed</string>
    <string name="remove_from_favourites_menu_item_title">Remove page from favourites</string>
    <string name="add_to_favourites_menu_item_title">Add page to favourites</string>
    <string name="empty_custom_group_message">No page found.</string>
    <string name="add_feature_to_group_button_text">Click here to add page(s)</string>
    <string name="article_list_heading_text">List of published articles</string>
    <string name="image_dl_disabled_on_data_net_message">Image downloading is disabled on mobile data network.Touch to view image</string>
    <string name="image_dl_disabled_on_data_net_message_bng">মোবাইল ডেটা নেটওয়ার্কে ছবি ডাউনলোডিং নিষ্ক্রিয় করা রয়েছে। ছবিটি দেখতে এখানে ক্লিক করুন</string>
    <string name="image_dl_disabled_on_data_net_message2">Touch to view image</string>
    <string name="image_dl_disabled_on_data_net_message2_ban">ছবিটি দেখতে এখানে ক্লিক করুন</string>
    <string name="dl_image_anyway_button_text">Download image</string>
    <string name="image_dl_change_settings_button_text">Change Settings</string>
    <string name="image_dl_change_settings_button_text_ban">সেটিংস পরিবর্তন করুন</string>
    <string name="article_image_description_text">Article image</string>
    <string name="edition_preview_image_text">Edition preview image</string>
    <string name="change_settings_button_text">Change Setting</string>
    <string name="remove_feature_button_desc">Remove News Category</string>
    <string name="enable_all_features_button_text">Enable all</string>
    <string name="enable_sepeartely_text">Customize individually:</string>
    <string name="settings_item_deleted_saved_articles_text">Delete saved articles</string>
    <string name="saved_articles_menu_text">Saved Articles</string>
    <string name="delete_saved_articles_option_text">Delete all</string>
    <string name="newspaper_extended_menu_title">Active Newspapers</string>
    <string name="newspaper_extended_menu_page_list_title">Active pages</string>
    <string name="edit_newspaper_menu_menu_item_title">Customize Newspaper Menu</string>
    <string name="light_button_background">#eee9e9</string>
    <string name="customize_app_home_page_menu_text">Customize Home Page</string>
    <string name="customize_newspaper_menu_item_text">Customize Menu</string>
    <string name="customize_news_categories_menu_item_text">Customize Categories</string>
    <string name="clear_all_menu_item_text">Clear all</string>
    <string name="clear_list_menu_item_text">Clear list</string>
    <string name="app_logo_content_desc">App Logo</string>
    <string name="app_slogan_text">Serving latest news of all sectors published in most some of the most prestigious newspapers of sub-continent and from all throughout the globe...</string>
    <string name="rename_feature_button_desc">Rename News Category</string>
    <string name="colorPrimaryDark2">#303F9F</string>
    <string name="change_text_font_menu_item_title">Change article text font</string>
    <string name="article_text_size_small_text">Small</string>
    <string name="article_text_size_regular_text">Regular</string>
    <string name="article_text_size_large_text">Large</string>
    <string name="article_text_size_extra_large_text">Extra Large</string>
    <string name="config_check_summary_report_selector">Report Summary</string>
    <string name="parent_feature_check_report_selector">Parent Feature Check Report</string>
    <string name="config_check_report_display_date_format">HH:mm d MMM</string>
    <string name="display_config_check_report_fragment_menu_text">Config Check Report</string>
    <string name="clear_report_summary_data_menu_item_title">Clear Report Summary Data</string>
    <string name="clear_parent_feature_check_data_menu_item_title">Clear Feature Check Data</string>
    <string name="admob_app_id">ca-app-pub-7732688854410370~5481585994</string>
    <string name="admob_news_server_banner_ad_unit_id_0001">ca-app-pub-7732688854410370/3870789728</string>
    <string name="admob_news_server_banner_ad_unit_id_0002">ca-app-pub-7732688854410370/7965947405</string>
    <string name="admob_news_server_banner_ad_unit_id_0003">ca-app-pub-7732688854410370/3330490403</string>
    <string name="admob_test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="disable_config_check__menu_text">Disable Config Check</string>
    <string name="enable_config_check_menu_text">Enable Config Check</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bmi_home_title">Home</string>
    <string name="bmi_more_title">More</string>
    <string name="bmi_saved_artiles_title">Saved</string>
    <string name="bmi_favourites_title">Favourites</string>
    <string name="bmi_page_groups_title">Groups</string>
    <string name="app_logo_on_initial_data_loading_page">App logo on Initial data loading page</string>
    <string name="no_internet_message">No internet connection!</string>
    <string name="log_in_app_menu_item_title">Log in/Sign up</string>
    <string name="page_search_text_box_hint">Page Search</string>
    <string name="title_activity_page_view">PageViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="pagegroup_title_input_hint">Pagegroup Name</string>
    <string name="page_search_to_add_text_box_hint">Search Page by name to add</string>
    <string name="current_page_list_title">Current pages</string>
    <string name="done_text">Done</string>
    <string name="reset_text">Reset</string>
    <string name="add_page_group_button_text">Add Group</string>
    <string name="log_in_sign_up">Log in/Sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="customize_button">Customize</string>
    <string name="load_more_articel_text">Load More</string>
    <string name="cancel_text">Cancel</string>
    <string name="ok_text">Ok</string>
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>
    <string name="delete_article_from_local_storage_menu_item_title">Delete Article</string>
</resources>