<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 www.dasbikash.org. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="start"
    android:paddingStart="80dp">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start">
        <RadioButton
            android:id="@+id/article_text_size_small_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/article_text_size_small_text" />
        <RadioButton
            android:id="@+id/article_text_size_regular_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/article_text_size_regular_text"/>
        <RadioButton
            android:id="@+id/article_text_size_large_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/article_text_size_large_text"/>
        <RadioButton
            android:id="@+id/article_text_size_extra_large_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/article_text_size_extra_large_text" />
    </RadioGroup>
</LinearLayout>