<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 www.dasbikash.org. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:visibility="gone">

    <ImageView
        android:id="@+id/nav_header_imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/app_big_logo"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:layout_gravity="left" />

    <TextView
        android:id="@+id/nav_header_app_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:visibility="gone"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/article_title_color"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="left"
        />

    <TextView
        android:id="@+id/nav_header_dev_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_email_address"
        android:visibility="visible"
        android:textSize="13sp"
        android:textStyle="italic"
        android:textColor="@color/article_title_color"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="left" />
</LinearLayout>